# BringYourOwnModel

./: .gitignore  .gitmodules  AndroidManifest.xml  build.ps1  build.sh
jni/: CMakeLists.txt  native-lib.cpp
res/values/: strings.xml
src/com/amiraq/byom/: MainActivity.java  R.java
